# mapping_gui

./: CMakeLists.txt  README.md  package.xml
desktop/: panorama.desktop
include/: Bash.h  LoopClosurePane.h  MainWindow.h  ManageMapPane.h  MappingPane.h  PointLocalizationPane.h  RosRelated.h  Utils.h  file_browser.h  imfilebrowser.hpp
src/: AboutDialog.cpp  Bash.cpp  CMakeLists.txt  FileRelated.cpp  LoopClosurePane.cpp  MainWindow.cpp  ManageMapPane.cpp  MappingPane.cpp  PointLocalizationPane.cpp  RosRelated.cpp  Sidebar.cpp  Utils.cpp  file_browser.cc  panorama.cpp
